Fixed Error aligning

--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@
 }
 
 .search-bar {
-  margin-top: 20px;
+  margin-top: 0 !important;
   height: 40px;
   border-radius: 0px 0px 16px 16px;
  color: #fff;
@@ -141,16 +141,15 @@ text-align: center;
   margin: 0 !important;
 }
 .card-root{
-  
- 
   background-image: url('./asset/background.jpg');
   width: 100%;
   height: 100vh;
   margin-bottom: 10px;
   margin-top: 10px;
+  transition: 0.4 ease;
 }
 .Card-content{
-  padding: 10px !important;
+  padding: 0 !important;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -268,6 +267,7 @@ text-align: center;
   height: 100vh;
   margin-bottom: 10px;
   margin-top: 10px;
+  transition: 0.4 ease;
 }
 
 .Light-Drizzle
@@ -277,6 +277,7 @@ text-align: center;
   height: 100vh;
   margin-bottom: 10px;
   margin-top: 10px;
+  transition: 0.4 ease;
 }
 
 .Light-snow
@@ -286,6 +287,7 @@ text-align: center;
   height: 100vh;
   margin-bottom: 10px;
   margin-top: 10px;
+  transition: 0.4 ease;
 }
 
 
@@ -295,6 +297,7 @@ text-align: center;
   height: 100vh;
   margin-bottom: 10px;
   margin-top: 10px;
+  transition: 0.4 ease;
 }
 
 .Clear-sky{
@@ -303,6 +306,7 @@ text-align: center;
   height: 100vh;
   margin-bottom: 10px;
   margin-top: 10px;
+  transition: 0.4 ease;
 }
 
 
@@ -313,6 +317,7 @@ text-align: center;
   height: 100vh;
   margin-bottom: 10px;
   margin-top: 10px;
+  transition: 0.4 ease;
 }
 
 
@@ -322,4 +327,5 @@ display: none !important;
 .error-text{
   color: red;
   font-size: 20px !important;
+  transition: 0.4 ease;
 }
